<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPrestasi">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_juduldetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/detail_prestasi"
            android:textColor="@color/cardview_dark_background"
            android:textSize="29sp"
            app:layout_constraintBottom_toTopOf="@+id/image_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="213dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:background="@color/light_teal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail"
            app:layout_constraintTop_toTopOf="@+id/image_detail"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_peringkat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_detailperingkat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal"
            android:text="@string/peringkat" />

        <TextView
            android:id="@+id/tv_detailperingkat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_peringkat"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_jeniskegiatan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_detailkegiatan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_detailperingkat"
            android:text="@string/nama_event" />

        <TextView
            android:id="@+id/tv_detailkegiatan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_jeniskegiatan"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_kesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/light_teal"
            android:text="@string/kesan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail" />

        <TextView
            android:id="@+id/tv_detailkesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_kesan"
            tools:text="@string/kesan" />

        <TextView
            android:id="@+id/tv_kendala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:background="@color/light_teal"
            android:text="@string/kendala"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailkesan" />

        <TextView
            android:id="@+id/tv_detailkendala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_kendala"
            tools:text="@string/kesan" />

        <TextView
            android:id="@+id/tv_saran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/saran"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/light_teal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailkendala" />

        <TextView
            android:id="@+id/tv_detailsaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_saran"
            tools:text="@string/kesan" />

        <Button
            android:id="@+id/bt_action_saran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="19dp"
            android:backgroundTint="@color/amber"
            android:text="@string/share_achievement"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailsaran"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>